--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "featured-galleries",
+  "name": "featured-icon",
   "version": "2.0.0",
   "devDependencies": {
     "autoprefixer": "^6.5.3",
